More work on converting wireframe

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -10,18 +10,18 @@
     <!-- CSS for the rest of the 3cute5me app -->
     <link rel="stylesheet" href="main.css">
 </head>
-<header>
-    <div class="row">
-        <div class="col-12">
-            
-        </div>
+<div class="row">
+    <div class="col-12">
+        <header>
+            <h1>SONGS FOR YOUR COMMUTE</h1>
+        </header>
+        <body>
+            <div class="add-for-later hidden">
+                <h2>How long is your trip today?</h2>
+            </div>
+            <div class="get-playlists-mood">
+            </div>
+        </body>
     </div>
-</header>
-<body>
-    <div class="row">
-        <div class="col-12">
-            
-        </div>
-    </div>
-</body>
+</div>
 </html>
