Added in UTF-8 for emojis

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>API Capstone - Spotify - Avi and William</title>
+    <meta charset="utf-8">
     <meta name="description" content="API Capstone for Thinkful by Avi and William">
     <!-- Google Font since Helvetica Neue isn't free 3sadbunbun5me -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> 
@@ -14,6 +15,7 @@
     <div class="col-12">
         <header>
             <h1>SONGS FOR YOUR COMMUTE</h1>
+            <p>Test 🐰</p>
         </header>
         <body>
             <div class="add-for-later hidden">
