Lie down the framework in HTML

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -15,13 +15,23 @@
     <div class="col-12">
         <header>
             <h1>SONGS FOR YOUR COMMUTE</h1>
-            <p>Test 🐰</p>
         </header>
         <body>
             <div class="add-for-later hidden">
                 <h2>How long is your trip today?</h2>
             </div>
             <div class="get-playlists-mood">
+                <h2>What do you want to listen to? Select a mood so we can find a playlist for you!</h2>
+                <a href=""><button type="button" class="emoji happy">🤗</button></a>
+                <a href=""><button type="button" class="emoji party">🎉</button></a>
+                <a href=""><button type="button" class="emoji fire">🔥</button></a>
+                <a href=""><button type="button" class="emoji relax">✌️</button></a>
+                <a href=""><button type="button" class="emoji sad">😭</button></a>
+                <button type="button" class="get-playlist">Get me to my playlist!</button>
+            </div>
+            <div class="show-playlists">
+                <div class="nav-buttons prev hidden">PREV</div>
+                <div class="nav-buttons next hidden">NEXT</div>
             </div>
         </body>
     </div>
