--- a/api-project/index.html
+++ b/api-project/index.html
@@ -22,11 +22,13 @@
             </div>
             <div class="get-playlists-mood">
                 <h2>What do you want to listen to? Select a mood so we can find a playlist for you!</h2>
-                <a href=""><button type="button" class="emoji happy">🤗</button></a>
-                <a href=""><button type="button" class="emoji party">🎉</button></a>
-                <a href=""><button type="button" class="emoji fire">🔥</button></a>
-                <a href=""><button type="button" class="emoji relax">✌️</button></a>
-                <a href=""><button type="button" class="emoji sad">😭</button></a>
+                <div class="emoji-setup">
+                    <a href=""><button type="button" class="emoji happy">🤗</button></a>
+                    <a href=""><button type="button" class="emoji party">🎉</button></a>
+                    <a href=""><button type="button" class="emoji fire">🔥</button></a>
+                    <a href=""><button type="button" class="emoji relax">✌️</button></a>
+                    <a href=""><button type="button" class="emoji sad">😭</button></a>
+                </div>
                 <button type="button" class="get-playlist">Get me to my playlist!</button>
             </div>
             <div class="show-playlists">
