--- a/api-project/index.html
+++ b/api-project/index.html
@@ -11,11 +11,12 @@
     <!-- CSS for the rest of the 3cute5me app -->
     <link rel="stylesheet" href="main.css">
 </head>
+<header>
+    <h1>WHAT'S YOUR VIBE?</h1>
+</header>
+<div class="divider grey"></div>
 <div class="row">
     <div class="col-12">
-        <header>
-            <h1>SONGS FOR YOUR COMMUTE</h1>
-        </header>
         <body>
             <div class="add-for-later hidden">
                 <h2>How long is your trip today?</h2>
@@ -38,4 +39,8 @@
         </body>
     </div>
 </div>
+<div class="divider darkgrey"></div>
+<footer>
+    <p>API Capstone for Thinkful. Cohort 11. Project by Avi and Thomas.</p>
+</footer>
 </html>
