Finished styling for now

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -30,7 +30,7 @@
                     <a href=""><button type="button" class="emoji relax">✌️</button></a>
                     <a href=""><button type="button" class="emoji sad">😭</button></a>
                 </div>
-                <button type="button" class="get-playlist">Get me to my playlist!</button>
+                <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
             </div>
             <div class="show-playlists">
                 <div class="nav-buttons prev hidden">PREV</div>
