--- a/api-project/index.html
+++ b/api-project/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="API Capstone for Thinkful by Avi and William">
     <!-- Google Font since Helvetica Neue isn't free 3sadbunbun5me -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <!-- Grid CSS Layout -->
     <link rel="stylesheet" href="grid.css">
     <!-- CSS for the rest of the 3cute5me app -->
@@ -36,6 +36,12 @@
                 <div class="nav-buttons prev hidden">PREV</div>
                 <div class="nav-buttons next hidden">NEXT</div>
             </div>
+            <script
+            src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous">
+            </script>
+            <script type="text/javascript" src="app.js"></script>
         </body>
     </div>
 </div>
