clickEmoji working, need to add searchterm strings

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -24,11 +24,11 @@
             <div class="get-playlists-mood">
                 <h2>What do you want to listen to? Select a mood so we can find a playlist for you!</h2>
                 <div class="emoji-setup">
-                    <a href="#"><button type="button" class="emoji happy">🤗</button></a>
-                    <a href="#"><button type="button" class="emoji party">🎉</button></a>
-                    <a href="#"><button type="button" class="emoji fire">🔥</button></a>
-                    <a href="#"><button type="button" class="emoji relax">✌️</button></a>
-                    <a href="#"><button type="button" class="emoji sad">😭</button></a>
+                    <a href="#"><button type="button" class="emoji happy" emoji-type="happy">🤗</button></a>
+                    <a href="#"><button type="button" class="emoji party" emoji-type="party">🎉</button></a>
+                    <a href="#"><button type="button" class="emoji fire" emoji-type="fire">🔥</button></a>
+                    <a href="#"><button type="button" class="emoji relax" emoji-type="relax">✌️</button></a>
+                    <a href="#"><button type="button" class="emoji sad" emoji-type="sad">😭</button></a>
                 </div>
                 <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
             </div>
