added links to playlist images and display toggle for prev and next

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -31,10 +31,11 @@
                     <a href="#" class="emoji sad" data-emojitype="sad">😭</a>
                 </div>
                 <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
+                <a href="#" class="nav-buttons js-prev">PREV</a>
+                <a href="#" class="nav-buttons js-next">NEXT</a>
             </div>
             <div class="show-playlists">
-                <div class="nav-buttons prev hidden">PREV</div>
-                <div class="nav-buttons next hidden">NEXT</div>
+
             </div>
             <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
