--- a/api-project/index.html
+++ b/api-project/index.html
@@ -31,8 +31,10 @@
                     <a href="#" class="emoji sad" data-emojitype="sad">😭</a>
                 </div>
                 <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
-                <a href="#" class="nav-buttons js-prev">PREV</a>
-                <a href="#" class="nav-buttons js-next">NEXT</a>
+                <div class="js-nav-buttons">
+                  <a href="#" class="nav-buttons js-prev">PREV</a>
+                  <a href="#" class="nav-buttons js-next">NEXT</a>
+                </div>
             </div>
             <div class="show-playlists">
 
