Tweaking files for CSS

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -31,9 +31,16 @@
                     <a href="#" class="emoji sad" data-emojitype="sad">😭</a>
                 </div>
                 <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
+                <!-- The PREV and NEXT buttons for selecting to go to more results of playlists 
+                     I have split up the buttons to two different columns so we can keep them
+                     responsive no matter the web page -->
                 <div class="js-nav-buttons">
-                  <a href="#" class="nav-buttons js-prev">PREV</a>
-                  <a href="#" class="nav-buttons js-next">NEXT</a>
+                    <div class="col-6">
+                        <a href="#" class="nav-buttons js-prev">PREV</a>
+                    </div>
+                    <div class="col-6">
+                        <a href="#" class="nav-buttons js-next">NEXT</a>
+                    </div>
                 </div>
             </div>
             <div class="show-playlists">
