--- a/api-project/index.html
+++ b/api-project/index.html
@@ -31,9 +31,11 @@
                     <a href="#" class="emoji sad" data-emojitype="sad">😭</a>
                 </div>
                 <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
+            </div>
+            <div class="playlist-window">
                 <!-- The PREV and NEXT buttons for selecting to go to more results of playlists 
-                     I have split up the buttons to two different columns so we can keep them
-                     responsive no matter the web page -->
+                I have split up the buttons to two different columns so we can keep them
+                responsive no matter the web page -->
                 <div class="js-nav-buttons">
                     <div class="col-6">
                         <a href="#" class="nav-buttons js-prev">PREV</a>
@@ -42,17 +44,15 @@
                         <a href="#" class="nav-buttons js-next">NEXT</a>
                     </div>
                 </div>
-            </div>
-            <div class="show-playlists">
-
+                <div class="divider white"></div>
+                <div class="show-playlists"></div>
             </div>
             <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous">
-            </script>
+            crossorigin="anonymous"></script>
             <script type="text/javascript" src="app.js"></script>
-        </body>
+            </body>
     </div>
 </div>
 <div class="divider darkgrey"></div>
