fixed href issue on anchor tags

--- a/api-project/index.html
+++ b/api-project/index.html
@@ -24,11 +24,11 @@
             <div class="get-playlists-mood">
                 <h2>What do you want to listen to? Select a mood so we can find a playlist for you!</h2>
                 <div class="emoji-setup">
-                    <a class="emoji happy" data-emojitype="happy" aria-label="happy">🤗</a>
-                    <a class="emoji party" data-emojitype="party">🎉</a>
-                    <a class="emoji fire" data-emojitype="fire">🔥</a>
-                    <a class="emoji relax" data-emojitype="relax">✌️</a>
-                    <a class="emoji sad" data-emojitype="sad">😭</a>
+                    <a href="#" class="emoji happy" data-emojitype="happy" aria-label="happy">🤗</a>
+                    <a href="#" class="emoji party" data-emojitype="party">🎉</a>
+                    <a href="#" class="emoji fire" data-emojitype="fire">🔥</a>
+                    <a href="#" class="emoji relax" data-emojitype="relax">✌️</a>
+                    <a href="#" class="emoji sad" data-emojitype="sad">😭</a>
                 </div>
                 <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
             </div>
@@ -37,8 +37,8 @@
                 I have split up the buttons to two different columns so we can keep them
                 responsive no matter the web page -->
                 <div class="js-nav-buttons">
-                        <a class="nav-buttons js-prev">PREV</a>
-                        <a class="nav-buttons js-next">NEXT</a>
+                        <a href="#" class="nav-buttons js-prev">PREV</a>
+                        <a href="#" class="nav-buttons js-next">NEXT</a>
                 </div>
                 <div class="show-playlists"></div>
             </div>
