--- a/api-project/index.html
+++ b/api-project/index.html
@@ -25,10 +25,10 @@
                 <h2>What do you want to listen to? Select a mood so we can find a playlist for you!</h2>
                 <div class="emoji-setup">
                     <a href="#" class="emoji happy" data-emojitype="happy" aria-label="happy">🤗</a>
-                    <a href="#" class="emoji party" data-emojitype="party">🎉</a>
-                    <a href="#" class="emoji fire" data-emojitype="fire">🔥</a>
-                    <a href="#" class="emoji relax" data-emojitype="relax">✌️</a>
-                    <a href="#" class="emoji sad" data-emojitype="sad">😭</a>
+                    <a href="#" class="emoji party" data-emojitype="party" aria-label="party">🎉</a>
+                    <a href="#" class="emoji fire" data-emojitype="fire" aria-label="its-lit">🔥</a>
+                    <a href="#" class="emoji relax" data-emojitype="relax" aria-label="chill">✌️</a>
+                    <a href="#" class="emoji sad" data-emojitype="sad" aria-label="sad">😭</a>
                 </div>
                 <button type="button" class="get-playlist hidden">Get me to my playlist!</button>
             </div>
